<resources>
    <string name="app_name">yGrades</string>

    <string-array name="lang_full_names">
        <item>English</item>
        <item>French</item>
    </string-array>

    <string-array name="lang_values">
        <item>en</item>
        <item>fr</item>
    </string-array>

    <string-array name="colors_full_name">
        <item>Blue</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Green</item>
    </string-array>

    <string-array name="colors_values">
        <item>blue</item>
        <item>red</item>
        <item>yellow</item>
        <item>green</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid or already in use</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_language">Language</string>
    <string name="settings_main_group">Main</string>
    <string name="action_logout">Logout</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="action_cancel">Cancel</string>
    <string name="pref_header_theme">Theme</string>
    <string name="title_fragment_subjects">Subjects</string>
    <string name="title_fragment_marks">Marks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_fragment_main">Home</string>
    <string name="markName">Exam name</string>
    <string name="markValue">Exam mark</string>
    <string name="save">Save</string>
    <string name="title_fragment_mark_create">Create a new mark</string>
    <string name="title_fragment_mark_edit">Edit a mark</string>
    <string name="error_name_empty">The \'Name\' field can\'t be empty</string>
    <string name="error_value_empty">The \'Value\' field can\'t be empty</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_mark">Do you really want to delete this mark?</string>
    <string name="subjectName">Subject name</string>
    <string name="subjectDescription">Subject description</string>
    <string name="title_fragment_subject_create">Create a new Subject</string>
    <string name="title_fragment_subject_edit">Edit a subject</string>
    <string name="dialog_delete_subject">Do you really want to delete this subject?</string>
    <string name="register_button">No account yet? Create one</string>
    <string name="register_password">Enter your password</string>
    <string name="register_confirm_password">Confirm your password</string>
    <string name="error_password_mismatch">Passwords are different</string>
    <string name="register_firstname">First name</string>
    <string name="register_lastname">Last name</string>
    <string name="error_email_already_exists">This email is already used</string>
    <string name="markWeighting">Weighting given to this mark (Default: 1)</string>
    <string name="average">Average</string>
    <string name="edit_student_old_password">Type your old password</string>
    <string name="error_old_password">Old password must be correct</string>
    <string name="modify_user">Modify user</string>
    <string name="register_user">Register</string>
    <string name="error_password_too_short">Your password is too short (&lt; 6 characters)</string>
    <string name="subject_created">Subject has been successfully created!</string>
    <string name="subject_updated">Your subject has been successfully updated</string>
    <string name="mark_created">Mark has been successfully created</string>
    <string name="mark_updated">Your mark has been successfully updated</string>
    <string name="password_update_completion">Your password has been updated</string>
    <string name="password_update_failure">Your password couldn\'t be changed</string>
    <string name="action_register">Create account</string>
</resources>
