<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_drawer_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_fragment_main" />

        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_subject_black_24dp"
            android:title="@string/title_fragment_subjects" />
    </group>
    <group android:id="@+id/nav_drawer_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userprofile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/modify_user" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/action_logout" />
    </group>

</menu>