<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_main_group">
        <ListPreference
            android:key="Language"
            android:title="@string/pref_header_language"
            android:summary="%s"
            android:defaultValue="true"
            android:entryValues="@array/lang_values"
            android:entries="@array/lang_full_names"/>
        <ListPreference
            android:key="Theme"
            android:title="@string/pref_header_theme"
            android:summary="%s"
            android:defaultValue="true"
            android:entryValues="@array/colors_values"
            android:entries="@array/colors_full_name"/>
    </PreferenceCategory>
</PreferenceScreen>